[gd_scene load_steps=9 format=3 uid="uid://db2a6ff271bfa"]

[ext_resource type="Script" path="res://Scenes/summoningCircle.gd" id="1_whoxd"]
[ext_resource type="Texture2D" uid="uid://jpabusjgnah8" path="res://Assets/SummonCircle.png" id="2_enseu"]
[ext_resource type="Resource" uid="uid://chx5wtajyckna" path="res://Scenes/Inventory/player_tower_inventory.tres" id="2_qpxx1"]
[ext_resource type="Script" path="res://Scenes/Inventory/Items/Ingredients/IngredientDisplayPanel.gd" id="3_cl85u"]
[ext_resource type="PackedScene" uid="uid://d2l1famc67ewk" path="res://Scenes/crafting_notification.tscn" id="4_gllqy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hbtw"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.611765, 0.611765, 0.611765, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xvd6"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.611765, 0.611765, 0.611765, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7n2t"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.611765, 0.611765, 0.611765, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SummoningCircle" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -160.0
offset_right = 160.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_whoxd")
inventory = ExtResource("2_qpxx1")

[node name="Sprite2D" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_enseu")

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Spacer" type="HBoxContainer" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="Spacer2" type="HBoxContainer" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Sprite2D/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8
alignment = 1

[node name="IngredientDisplayPanel" type="Panel" parent="Sprite2D/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6hbtw")
script = ExtResource("3_cl85u")

[node name="Center" type="CenterContainer" parent="Sprite2D/VBoxContainer/HBoxContainer3/IngredientDisplayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Sprite2D/VBoxContainer/HBoxContainer3/IngredientDisplayPanel/Center"]
layout_mode = 2

[node name="IngredientDisplayPanel2" type="Panel" parent="Sprite2D/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3xvd6")
script = ExtResource("3_cl85u")

[node name="Center" type="CenterContainer" parent="Sprite2D/VBoxContainer/HBoxContainer3/IngredientDisplayPanel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Sprite2D/VBoxContainer/HBoxContainer3/IngredientDisplayPanel2/Center"]
layout_mode = 2

[node name="IngredientDisplayPanel3" type="Panel" parent="Sprite2D/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_k7n2t")
script = ExtResource("3_cl85u")

[node name="Center" type="CenterContainer" parent="Sprite2D/VBoxContainer/HBoxContainer3/IngredientDisplayPanel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Sprite2D/VBoxContainer/HBoxContainer3/IngredientDisplayPanel3/Center"]
layout_mode = 2

[node name="Craft" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 48.0
offset_top = 45.0
offset_right = 120.0
offset_bottom = 76.0
text = "Craft"

[node name="Cancel" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 183.0
offset_top = 44.0
offset_right = 255.0
offset_bottom = 75.0
text = "Cancel"

[node name="Notification" parent="." instance=ExtResource("4_gllqy")]
layout_mode = 1
offset_left = 1.0
offset_top = -289.0
offset_right = 1.0
offset_bottom = -289.0

[connection signal="pressed" from="Craft" to="." method="_on_craft_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
